# deepseek-ocr-translate

./: .gitignore  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_PREP.md  README.md  nginx.conf.example  ocr-backend.service.example  start_all.bat  start_all.sh  start_all_clean.sh  stop_all.bat  stop_all.sh  开源准备清单.md
backend/: .env.example  clean_ocr_tags.bat  clean_ocr_tags.ps1  clean_ocr_tags.py  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  correction.py  history.py  user.py
backend/app/routers/: __init__.py  auth.py  correction.py  history.py  ocr.py  translate.py
backend/app/schemas/: __init__.py  correction.py  task.py  user.py
backend/app/services/: __init__.py  correction_service.py  embedding_service.py  export_service.py  ocr_service.py  translate_service.py
backend/app/utils/: __init__.py  crypto.py  limiter.py  retry.py  sentence_splitter.py
backend/static/: index.html
backend/static/assets/: Corrections-3jQKpdoE.js  History-0P7hjLAa.js  History-G0YS2Kyw.css  Home-D6putq3e.js  Home-rCiLQ3_8.css  Login-B49SO7ZL.js  Login-BboaTGdz.css  OCR-ByDpzji8.js  OCR-SAF4gM7h.css  Settings-CTQZy0e1.js  Translate-Dnwxh4f2.js  index-BEEL7eZv.js  index-CwTwoecR.css
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: history.js  index.js  translate.js
frontend/src/router/: index.js
frontend/src/stores/: user.js
frontend/src/utils/: request.js
frontend/src/views/: Corrections.vue  History.vue  Home.vue  Login.vue  (+3 more)
